# eai

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_STRUCTURE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  codeql.yml  cross-platform-hal.yml  nightly.yml  qemu-test.yml  release.yml  simulation-test.yml  video-build.yml  weekly.yml
accel/: CMakeLists.txt
bci/: CMakeLists.txt
bci/include/eai_bci/: api.h  config.h  decoder.h  device.h  device_manager.h  eai_bci.h  eipc.h  output.h  pipeline.h  plugin.h  signal.h  types.h
bci/src/: api.c  bci_config.c  bci_eipc.c  connector_bci.c  decoder_snn.c  decoder_threshold.c  device_emotiv.c  device_manager.c  device_muse.c  device_openbci.c  device_simulator.c  output_gpio.c  output_log.c  pipeline.c  plugin_registry.c  signal.c
bindings/cpp/: eai_bci.hpp
bindings/python/: setup.py
bindings/python/eai_bci/: __init__.py  core.py  pipeline.py
ci/: build-all.sh  build-android.sh  build-arm-cross.sh  build-linux-native.sh  build-macos.sh  build-windows.bat  test-all.sh  test-docker-matrix.sh  test-qemu-arm.sh
ci/docker/: Dockerfile.alpine  Dockerfile.arm64  Dockerfile.asan  Dockerfile.clang
cli/src/: main.c
cmake/: toolchain-arm-cortex-m4.cmake
common/: CMakeLists.txt
common/include/eai/: adaptive.h  common.h  config.h  eipc_listener.h  manifest.h  runtime_contract.h  types.h
common/src/: adaptive.c  config.c  eipc_listener.c  log.c  runtime_contract.c  tools_builtin.c
docs/: ci-secrets-setup.md  porting-guide.md
docs/bci/: architecture.md  getting_started.md
docs/book/: book.md  references.bib
formats/: CMakeLists.txt
framework/: CMakeLists.txt
framework/include/eai_fw/: adaptive.h  eai_framework.h  federated.h  guardrails.h  network_security.h  orchestrator.h  policy.h  secure_boot.h  sensor_fusion.h  supply_chain.h  update_manager.h
framework/src/: adaptive.c  connector_can.c  connector_modbus.c  connector_mqtt.c  connector_opcua.c  federated.c  guardrails.c  network_security.c  orchestrator.c  policy.c  secure_boot.c  sensor_fusion.c  supply_chain.c  update_manager.c
min/: CMakeLists.txt
min/include/eai_min/: agent.h  compression.h  eai_min.h  observability_lite.h  power.h  security_lite.h  sensor.h  update.h
min/src/: agent.c  compression.c  observability_lite.c  power.c  router.c  runtime.c  runtime_llama.c  security_lite.c  sensor.c  update.c
models/: models.c  models.h
platform/: CMakeLists.txt
platform/src/: platform_eos.c
platform/src/hal/macos/: memory_macos.c
profiles/adaptive-edge/: profile.yaml
profiles/bci-assistive/: profile.yaml
promo/: generate_audio.py  promo_scene.py
tests/: CMakeLists.txt  test_adaptive.c  test_agent.c  test_bci_device.c  test_bci_pipeline.c  test_bci_signal.c  test_config.c  test_formats.c  test_memory.c  test_models.c  test_tool.c
tools/bench/: eai_bench.c
tools/convert/: eai_convert.c
tools/profile/: eai_profile.c
